Building the HumanResources feature

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,40 @@
 */
 
 /* Colors adapted from https://tailwindcss.com/docs/customizing-colors */
+:root {
+  --ds-rgb-black: #000000;
+  --ds-rgb-white: #ffffff;
+  --ds-rgb-slate-50: #f8fafc;
+  --ds-rgb-slate-100: #f1f5f9;
+  --ds-rgb-slate-200: #e2e8f0;
+  --ds-rgb-slate-300: #cbd5e1;
+  --ds-rgb-slate-400: #94a3b8;
+  --ds-rgb-slate-500: #64748b;
+  --ds-rgb-slate-600: #475569;
+  --ds-rgb-slate-700: #334155;
+  --ds-rgb-slate-800: #1e293b;
+  --ds-rgb-slate-900: #0f172a;
+  --ds-rgb-red-50: #fef2f2;
+  --ds-rgb-red-100: #fee2e2;
+  --ds-rgb-red-200: #fecaca;
+  --ds-rgb-red-300: #fca5a5;
+  --ds-rgb-red-400: #f87171;
+  --ds-rgb-red-500: #ef4444;
+  --ds-rgb-red-600: #dc2626;
+  --ds-rgb-red-700: #b91c1c;
+  --ds-rgb-red-800: #991b1b;
+  --ds-rgb-red-900: #7f1d1d;
+  --ds-rgb-zinc-50: #fafafa;
+  --ds-rgb-zinc-100: #f4f4f5;
+  --ds-rgb-zinc-200: #e4e4e7;
+  --ds-rgb-zinc-300: #d4d4d8;
+  --ds-rgb-zinc-400: #a1a1aa;
+  --ds-rgb-zinc-500: #71717a;
+  --ds-rgb-zinc-600: #52525b;
+  --ds-rgb-zinc-700: #3f3f46;
+  --ds-rgb-zinc-800: #27272a;
+  --ds-rgb-zinc-900: #18181b;
+}
 
 :root {
   /* Indigo */
